- ALL: looked up vat rate may still be a single float, not necessarily an array:
  'array' type hint in Completor::metaDataHas0VatRate() is incorrect.
- ALL: allow, recognise and store empty multi-select fields on the config forms.
- ALL: notice Undefined index nature in completor.php on line 336.
- OC2/OC3: mail did not use the correct property names for the smtp settings.

Features:
- ALL: Make better use of available meta data (by combining them) to get the vat
  rate of a line.
- WC3: WC seems to return amounts with an increased precision (was: rounded to
  the cent. now: it seems not any longer rounded).
- WC3: Follow setting 'woocommerce_tax_based_on' to determine the country code.
- WC: Use country, city and postal code of Acumulus invoice (instead of Customer
  object) to get lookup tax rates. (this also makes
  WooCommerce\Creator::getVatRateLookupMetadataByTaxClass() work in WC2...)
- WC: Remove properties $order and $refund from Creator class.

5.5.0 (2018-11-14)
------------------
Features:
- ALL: There are more products than the digital services that are subject to
  foreign vat for EU customers:
  - Rephrase everything that has to do with digital services (vat type 6).
  - Rename option digitalServices to foreignVat.
- ALL: better differentiate between invoice type 1 and 6 for countries having
  the same vat rate as NL:
  * Meta::VatRateLookupLabel is now also an array.
  * Add vat class information as metadata.
  * Add method ShopCapabilities::getVatClasses().
  * Add setting foreignVatClasses (default, UI on config form).
  * Use setting foreignVatClasses and vat class meta data to select between vat
    type 1 and 6.
- OC: Improved filling vat class/rate lookup meta data by matching zones of
  order address with geo zones of tax rates.
- ALL: Support for new roles and permissions to access the web server API.
- ALL: Added logging to execution stage of batch form.
- ALL: Make "property specification not found" a debug level message.