@@ -31,6 +31,8 @@ Bugs:
 - OC2/OC3: mail did not use the correct property names for the smtp settings.
 
 Features:
+- ALL: Make better use of available vat class meta data to reduce the possible
+  vat types of a line.
 - ALL: Make better use of available meta data (by combining them) to get the vat
   rate of a line.
 - WC3: WC seems to return amounts with an increased precision (was: rounded to
